# DeepLearning

./: .gitignore  Fine_Tuning  Gemfile  Qwen_2_5_Conversational_+_Unsloth_2x_faster_finetuning.ipynb  README.md  Untitled9.ipynb  Vector_Databases.MD  cnn.ipynb  daily_prompt.md  feed.xml  grok.py  ignore_large_files.sh  index.html  index_bkp.html  matmul.py  pyproject.toml  pytorchshape.ipynb  requirements.txt  robots.txt  sitemap.xml  softmax.py  test1.md  test_llm.py  theory_of_mind.py  vector.ipynb  vectoradd.ipynb
01-deep-neural-networks/01-dnn/src/: setup.cfg  setup.py
01-deep-neural-networks/01-dnn/src/micrograd/: engine.py  neuralnetwork.py
01-deep-neural-networks/01-dnn/src/micrograd.egg-info/: PKG-INFO  SOURCES.txt
01-deep-neural-networks/01-dnn/src/myproject.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
deepseek_parts/: FFN.py  RMSNorm.py  Swish.py  SwishExpertMoE.py  deepseek.md
docs/: Gemfile  _config.yaml  index.md  index_bkp.md
llm_post_training/: Fine_Tuning.md
logs/: 2024-08-08T10-58-03+00-00_theory-of-mind_7ckSyfuMVSYjij2wAtEEZR.json
nni/: build_makemore_mlp_yay.ipynb  gpttokenizer.ipynb
py310_env/: pyvenv.cfg
pytorch-paligrmma-live/: modeling_siglip.py  modelling_gemma.py  processing_paligemma.py
triton/: GELU_triton.ipynb  Leakyrelu.ipynb  ReLU_triton.ipynb  Relu_benchmark.ipynb  Sigmoid_triton.ipynb  Trition_constant_add.ipynb  constantadd.py  helper.ipynb  jax_triton.py  leakyReLU.py  matmul.py  readme.md  relu_pytorch_autograd.py  sigmoid.py  tanh.ipynb  tanh.py  torch_complie_add.ipynb  vector.py  vectoradd.ipynb
(+77 files in other folders)
