# setup.cfg
[metadata]
name = myproject
version = 0.1.0
author = N Shravan Reddy
author_email = nshravanreddy6@gmail.com
description = micro grad
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/myproject  # URL to your project's repository or homepage
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
